Add object to create a SqsAyncClient